tests/ui-nightly/transmute-ref-dst-unsized.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> tests/ui-nightly/transmute-ref-dst-unsized.rs:17:28
    |
 17 | const DST_UNSIZED: &[u8] = transmute_ref!(&[0u8; 1]);
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Wrap::<&'a Src, &'a Dst>::transmute_ref`
   --> /app/src/util/macro_util.rs:757:15
    |
757 | impl<'a, Src, Dst> Wrap<&'a Src, &'a Dst> {
    |               ^^^ required by this bound in `Wrap::<&Src, &Dst>::transmute_ref`
...
770 |     pub const unsafe fn transmute_ref(self) -> &'a Dst {
    |                         ------------- required by a bound in this associated function
    = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
